2006-04-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c:

	Don't set find next/prev insensitive since that's redundant with
	the status indication, and breaks find while the document is loading.

2006-04-10  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed.cpp:

	Emit document-change event on fastback restore. Fixes bug #312785.

2006-04-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Enable spatial nav extension.

2006-04-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	A data/epiphany-pango.schemas:
	* lib/ephy-prefs.h:
	* src/ephy-main.c: (main):

	Enable pango for some indic languages, which depend on it for correct
	rendering. Bug #335799.

2006-04-03  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-net-monitor.c:

	Improve the current code (less complex) and add a timeouted call
	to NetworkManager when requesting network status.
	Bug 330479.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	(ephy_bookmarks_editor_construct):

	Disable export when locked down. Bug #337028.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/downloader-view.c:

	Fix status icon reference count.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:

	Make sure we don't show "100%" on downloads unless they're really
	completed.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_get_bus):
	* src/ephy-net-monitor.c:
	(ephy_net_monitor_check_for_active_device),
	(ephy_net_monitor_attach_to_dbus), (ephy_net_monitor_startup):

	Don't crash when we cannot connect to the system dbus. Bug #336557.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_help_with_doc_id), (ephy_gui_help):
	* lib/ephy-gui.h:

	Add ephy_guid_help_with_doc_id for use by e-e.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>
