@@ -7,7 +7,7 @@ Exec=epiphany --bookmarks-editor
 StartupNotify=true
 Terminal=false
 Type=Application
-Icon=epiphany-bookmarks.png
+Icon=epiphany-bookmarks
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=epiphany
 X-GNOME-Bugzilla-Component=General
