@@ -7,7 +7,7 @@ Exec=epiphany %U
 StartupNotify=true
 Terminal=false
 Type=Application
-Icon=web-browser.png
+Icon=web-browser
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=epiphany
 X-GNOME-Bugzilla-Component=General
