@@ -1,3 +1,11 @@
+2006-04-10  Paul Drain <pd@cipherfunk.org>
+
+	* data/art/Makefile.am:
+	* data/bme-desktop.in.in:
+ 	* data/epiphany-desktop.in.in:
+
+	Install App-Friendly Theme Icons (GNOME Goal Two)
+
 2006-04-10  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-find-toolbar.c:
